infrastructure/k8s/logtracer-microservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: logtracer-microservice
  name: logtracer-microservice
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: logtracer-microservice
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yaml
        kompose.version: 1.26.1 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/internal-network: "true"
        io.kompose.service: logtracer-microservice
    spec:
      containers:
        - env:
            - name: KAFKA_PORT
              value: "29092"
            - name: KAFKA_URL
              value: kafka-engine
            - name: TOPIC_NAME
              value: logtrace
          image: us-east1-docker.pkg.dev/nojipiz-corp-infrastructure/microservices-workshop/logtracer_microservice
          name: logtracer-microservice
          resources: {}
      restartPolicy: Always
status: {}
