infrastructure/k8s/parking-manager-microservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: parking-manager-microservice
  name: parking-manager-microservice
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: parking-manager-microservice
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yaml
        kompose.version: 1.26.1 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.service: parking-manager-microservice
    spec:
      containers:
        - image: us-east1-docker.pkg.dev/nojipiz-corp-infrastructure/microservices-workshop/parking_manager_microservice
          name: parking-manager-microservice
          ports:
            - containerPort: 3042
          resources: {}
      restartPolicy: Always
status: {}
