infrastructure/k8s/postgresql-engine-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: postgresql-engine
  name: postgresql-engine
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: postgresql-engine
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yaml
        kompose.version: 1.26.1 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/internal-network: "true"
        io.kompose.service: postgresql-engine
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              value: authentication
            - name: POSTGRES_PASSWORD
              value: totally_secure_password
          image: postgres
          name: postgresql-engine
          ports:
            - containerPort: 5432
          resources: {}
      restartPolicy: Always
status: {}
