infrastructure/k8s/kafka_engine-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: kafka-engine
  name: kafka-engine
spec:
  ports:
    - name: "29092"
      port: 29092
      targetPort: 29092
    - name: "9092"
      port: 9092
      targetPort: 9092
  selector:
    io.kompose.service: kafka-engine
status:
  loadBalancer: {}
