infrastructure/k8s/parking_manager_microservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: parking-manager-microservice
  name: parking-manager-microservice
spec:
  type: LoadBalancer 
  ports:
    - name: "3042"
      port: 3042
      targetPort: 3042
  selector:
    io.kompose.service: parking-manager-microservice
status:
  loadBalancer: {}
