infrastructure/k8s/internal-network-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: internal-network
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/internal-network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/internal-network: "true"
